--- a/HomeWork-8/Task2/Form1.resx
+++ b/HomeWork-8/Task2/Form1.resx
@@ -117,4 +117,36 @@
   <resheader name="writer">
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
+  <metadata name="menuStrip1.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
+    <value>17, 17</value>
+  </metadata>
+  <assembly alias="System.Drawing" name="System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a" />
+  <data name="$this.Icon" type="System.Drawing.Icon, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+    <value>
+        AAABAAEAEBAAAAAAAABoBQAAFgAAACgAAAAQAAAAIAAAAAEACAAAAAAAQAEAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAA////AP6vAgBhUM4A/ddoAI2A+gD8xzMAZlX4AP27GgD8wSYA/rUOAGJQ2gBlVPEA/bgUAP3U
+        YgD8xS0A/bAHAP2/IgCMf/YA/LYRAP2yCgD8yTYAZVT1AP28HQD8yDAAY1LZAGFPzAD+sAUA/dVkAGJR
+        zgCMf/oA/a8FAP68HAD8xzEA/Mg0APvJNQD91mcAZVT0AGZU8QBhUMwAjID2AP2wBgD9uBMA/bcUAP27
+        GQD9vBwA/MUuAPzHMAD8xzIA/Mk1AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAB8bAAAAAAAAJxoAAAAAACsOHA0AAAAAGRIoCwAAAAAvJAQYAAAAABYeBSUAAAAAADEx
+        AAAAAAAABwcAAAAAAAAAAAAAAAAAAAAAAAAAAAAAECkAAAAAAAAdAwAAAAAAAA8uAAAAAAAADCYAAAAA
+        AAAxMSAKAAAAAAcHAAAAAAAAMTEwERQAAAAHBwAAAAAAABUxMTEhKgAABwcAAAAAAhMAAAAxMQkAAAcH
+        AAAAFwYtAAAAMTEhAAAHBwAAACMxIgAAADExMQAABwcAAAAAMTEIAiwxMQAAAAcHAAAAADExMTExMTEA
+        AAAHBwAAAAAAADExMQAAAAAABwcAAPPzAADh4QAA4eEAAPPzAAD//wAA8/MAAPPzAADw8wAA8HMAAPAz
+        AADOMwAAjjMAAI4zAADAcwAAwHMAAPHzAAA=
+</value>
+  </data>
 </root>
